--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.23.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-alpha2",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
